Changes in Caudium 1.4.5 since Caudium 1.4.4
--------------------------------------------
- <if> no longer evaluates true if using the "element is value" syntax and the 
  element is not present.
   (Bill Welliver)
- Fixed a backtrace when loading the WebApp module.
   (Bill Welliver)

Changes in Caudium 1.4.4 since Caudium 1.4.2
--------------------------------------------
- Backport of Watchdog stuff from the development branch:
  - Watchdog debug can be enabled using --watchdog-debug
  - If set using HTTP GET, the watchdog can now be set up either to check every
    1st level virtual server or either only the first one.
  - The watchdog can now check virtual servers using HTTP GET
   (Bertrand Lupart)
- The id->variables isn't set as before regarding variables with emtpy values,
  this broke the screen for adding a new virtual server.
	 (Bertrand Lupart)
- Watchdog PID check can now be disabled with --without-watchdog-pidcheck
  It is disabled by default on Linuxes < 2.6, since their threads
	implementations assigned different PIDs for each thread.
	 (Bertrand Lupart)
- Fixed backtrace when using <accessed since> or <accessed help> when accessed
  was handled by accessed-sql or accessed-memory.
	 (Bertrand Lupart)
- Not using strftime on solaris as it does not support the POSIX %z flag
  which rendered Caudium.cern_http_date() unusable.
   (Marek Habersack)
- The id->variables wasn't set as before regarding empty values, this broke
  some applications and most notably lead to internal server error when
  reseting a variable in the configuration interface.
   (David Gourdelier)
- Comparing of empty strings didn't work in RXML so this lead to wrong 
  <if match...>
   (David Gourdelier)
- Fix for the RXML parsers sending the wrong content-type header when parsing
  a non-html document.
   (James Tyson)
- Error code was incorrectly set to 401 for every error.
   (David Gourdelier)
- Pikegraphy now likes filenames with spaces.
   (Bill Welliver)