@@ -1,5 +1,8 @@
 Changes in Caudium 1.4.5 since Caudium 1.4.4
 --------------------------------------------
+- On *BSD flavors we don't use /sbin/ifconfig to get all IP addresses from
+  the system. An internal C function is used (_Caudium.getip()).
+   (Xavier Beaudouin)
 - <if> no longer evaluates true if using the "element is value" syntax and the 
   element is not present.
    (Bill Welliver)
